# AMTEC_microterror

./: .env.example  .env.local.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
apps/api/: pyproject.toml
apps/api/amtec_microterror_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/app/: db.py  main.py  models.py  schemas.py
apps/web/: index.html  package.json
apps/web/src/: App.tsx  styles.css
apps/web/src/features/corridor/: CorridorScene.tsx
apps/web/src/features/corridor/runtime/: AudioDirector.tsx  EndingResolver.ts  EventDirector.ts  ThreatController.tsx  corridorTemplate.ts  useHallwayRuntime.ts  useHallwayTelemetry.ts
apps/web/src/lib/: api.ts
docs/: agente_tu_flipao_inicia_la_app.md  agentes_despliegue_local.md  arquitectura-react-render-agentes.md  checklist_despliegue_local.md  desarrollo_local.md  mvp_escena_pasillo.md  scripts-panel.html
scripts/: run_local_deploy_checklist.sh  setup_local_env.sh  start_api_local.sh  start_web_local.sh  stop_local_deploy.sh  tu_flipao_inicia_la_app.sh
services/agent-orchestrator/: pyproject.toml
services/agent-orchestrator/app/: agent_catalog.py  calls.py  checklists.py  main.py  playbooks.py
