[project]
name = "amtec-microterror-api"
version = "0.1.0"
description = "API service for the AMTEC microterror hallway MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0"
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
