[project]
name = "amtec-microterror-agent-orchestrator"
version = "0.1.0"
description = "Agent orchestration service for AMTEC microterror"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0"
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.uvicorn]
host = "0.0.0.0"
port = 8100
